feat(Problem6): splitLexim 함수 생성